[gd_scene load_steps=8 format=2]

[ext_resource path="res://Asstes/Fonts/BitPotion.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Ui/ScoreScreen.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
size = 156
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 96
font_data = ExtResource( 1 )

[node name="ScoreScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = -64.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1152.0
margin_bottom = 592.0
custom_constants/separation = 17

[node name="YouDied" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 3.0
margin_right = 1152.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 0.317647, 0.317647, 1 )
custom_fonts/font = SubResource( 1 )
text = "You Died!"
align = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 1152.0
margin_bottom = 151.0
custom_styles/separator = SubResource( 3 )

[node name="TimeSurvived" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 1152.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 2 )
text = "Time Survived: 00:00:00"
align = 1

[node name="EnemiesKilled" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 236.0
margin_right = 1152.0
margin_bottom = 287.0
custom_fonts/font = SubResource( 2 )
text = "Enemies Killed: 9"
align = 1

[node name="TreasureCollected" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 1152.0
margin_bottom = 355.0
custom_fonts/font = SubResource( 2 )
text = "Treasure Collected: 25"
align = 1

[node name="RoomsVisited" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 372.0
margin_right = 1152.0
margin_bottom = 423.0
custom_fonts/font = SubResource( 2 )
text = "Rooms Visited: 2"
align = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 440.0
margin_right = 1152.0
margin_bottom = 444.0
custom_styles/separator = SubResource( 3 )

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 488.0
margin_right = 1152.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Score: 250"
align = 1
